--- a/TCGFrontend/src/App.css
+++ b/TCGFrontend/src/App.css
@@ -8,6 +8,11 @@
     width: 100%;
     margin-bottom: 5px;
 }
+
 .btn-success {
     background-color: #0817f5;
+}
+
+.akcije{
+    margin-top: 1.5rem;
 }
